# online-cv-renderer

./: .gitignore  README.md  Taskfile.yml  public.json  pyproject.toml  technologies.md
src/: gen_md.py  server.py
static/: index.html  main.css  md.css
