[tool.poetry]
name = "markdown-cv"
version = "0.1.0"
description = ""
authors = ["bogdan.vakulyuk <bogvak@gmail.com>"]
readme = "README.md"
packages = [{include = "markdown_cv"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
